--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,10 @@ on:
 
 jobs:
   go:
-    runs-on: namespace-profile-e2e-medium
+    runs-on:
+      - nscloud-ubuntu-22.04-amd64-4x16-with-cache
+      - nscloud-cache-size-20gb
+      - nscloud-cache-tag-space
     steps:
       - uses: actions/checkout@v6
 
@@ -52,7 +55,10 @@ jobs:
           golangci-lint run ./...
 
   space-e2e:
-    runs-on: namespace-profile-e2e-medium
+    runs-on:
+      - nscloud-ubuntu-22.04-amd64-4x16-with-cache
+      - nscloud-cache-size-20gb
+      - nscloud-cache-tag-space
     steps:
       - uses: actions/checkout@v6
 
