--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,27 +17,27 @@ jobs:
       - nscloud-cache-size-20gb
       - nscloud-cache-tag-space
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
 
       - name: Set up Nix cache
-        uses: namespacelabs/nscloud-cache-action@v1
+        uses: namespacelabs/nscloud-cache-action@446d8f390563cd54ca27e8de5bdb816f63c0b706 # v1
         with:
           path: /nix
 
       - name: Install Nix
-        uses: cachix/install-nix-action@v31
+        uses: cachix/install-nix-action@bec50b45a8bb06017c42af46702a3f502adcfa9e # v31
         with:
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
             system-features = kvm nixos-test
 
       - name: Switch into Nix Shell
-        uses: lukas-mertens/switch-into-nix-shell@ce1f85f07ceba523ece60c73eb2b18d1fa5503f5
+        uses: lukas-mertens/switch-into-nix-shell@ce1f85f07ceba523ece60c73eb2b18d1fa5503f5 # v1.0.0
         with:
           install_nix: false
 
       - name: Set up cache
-        uses: namespacelabs/nscloud-cache-action@v1
+        uses: namespacelabs/nscloud-cache-action@446d8f390563cd54ca27e8de5bdb816f63c0b706 # v1
         with:
           cache: |
             go
@@ -64,22 +64,22 @@ jobs:
       - nscloud-cache-size-20gb
       - nscloud-cache-tag-space
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
 
       - name: Set up Nix cache
-        uses: namespacelabs/nscloud-cache-action@v1
+        uses: namespacelabs/nscloud-cache-action@446d8f390563cd54ca27e8de5bdb816f63c0b706 # v1
         with:
           path: /nix
 
       - name: Install Nix
-        uses: cachix/install-nix-action@v31
+        uses: cachix/install-nix-action@bec50b45a8bb06017c42af46702a3f502adcfa9e # v31
         with:
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
             system-features = kvm nixos-test
 
       - name: Switch into Nix Shell
-        uses: lukas-mertens/switch-into-nix-shell@ce1f85f07ceba523ece60c73eb2b18d1fa5503f5
+        uses: lukas-mertens/switch-into-nix-shell@ce1f85f07ceba523ece60c73eb2b18d1fa5503f5 # v1.0.0
         with:
           install_nix: false
 
