--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         uses: namespacelabs/nscloud-cache-action@652b0109faeacbfebc50004c304dfd0c2235ea17 # v1.3.0-beta.1
         with:
           space-enabled: true
+          space-version: '0.2.0-beta.1'
           path: /nix
 
       - name: Install Nix
@@ -39,6 +40,7 @@ jobs:
         uses: namespacelabs/nscloud-cache-action@652b0109faeacbfebc50004c304dfd0c2235ea17 # v1.3.0-beta.1
         with:
           space-enabled: true
+          space-version: '0.2.0-beta.1'
           mode: |
             go
             golangci-lint
@@ -70,6 +72,7 @@ jobs:
         uses: namespacelabs/nscloud-cache-action@652b0109faeacbfebc50004c304dfd0c2235ea17 # v1.3.0-beta.1
         with:
           space-enabled: true
+          space-version: '0.2.0-beta.1'
           path: /nix
 
       - name: Install Nix
