--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,11 +85,16 @@ jobs:
       - name: Switch into Nix Shell
         uses: rcrowe/switch-into-nix-shell@b109dab0869e1f5665d6eacc246cc5282da53811 # v1
 
-      - name: Setup cache with space binary
-        run: |
-          go run . cache mount \
-            --dry_run=false \
-            --mode=go
+      - name: Install space from HEAD
+        run: go build -o dist/space .
+
+      - name: Set up Nix cache
+        uses: namespacelabs/nscloud-cache-action@652b0109faeacbfebc50004c304dfd0c2235ea17 # v1.3.0-beta.1
+        with:
+          space-enabled: true
+          mode: go
+        env:
+          NSC_POWERTOYS_DIR: ./dist/ # force binary location
 
       - name: Force cache
         run: go mod download
