--- a/.github/workflows/release-latest.yml
+++ b/.github/workflows/release-latest.yml
@@ -1,17 +1,17 @@
-# Release latest
+# Release dev
 #
-# This workflow creates a "latest" prerelease from the main branch.
+# This workflow creates a "dev" prerelease from the main branch.
 #
 # How it works:
 # 1. On each push to main, this workflow runs
-# 2. It cleans up any existing -latest releases and their tags
-# 3. It creates a new tag in the format vX.Y.0-latest (e.g., v0.5.0-latest)
+# 2. It cleans up any existing -dev releases and their tags
+# 3. It creates a new tag in the format vX.Y.0-dev (e.g., v0.5.0-dev)
 # 4. It triggers release-tag.yml via workflow_dispatch (this works because
 #    workflow_dispatch is exempt from the GITHUB_TOKEN workflow trigger restriction)
 # 5. goreleaser runs with prerelease:auto, which automatically marks tags
 #    containing "-" as prereleases - so it won't appear as "latest stable"
 
-name: Release latest
+name: Release dev
 
 on:
   push:
@@ -31,18 +31,18 @@ jobs:
         with:
           fetch-depth: 0  # Fetch all history and tags for version calculation
 
-      - name: Clean up old latest releases
+      - name: Clean up old dev releases
         run: |
-          # Query GitHub for existing releases ending in -latest and delete them
+          # Query GitHub for existing releases ending in -dev and delete them
           # along with their tags. This ensures we don't accumulate old releases.
-          gh release list --json tagName -q '.[].tagName' | grep -E '\-latest$' | while read -r tag; do
+          gh release list --json tagName -q '.[].tagName' | grep -E '\-dev$' | while read -r tag; do
             echo "Deleting release: $tag"
             gh release delete "$tag" --cleanup-tag --yes 2>/dev/null || true
           done
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create latest tag
+      - name: Create dev tag
         id: tag
         run: |
           git config user.name "${GITHUB_ACTOR}"
@@ -54,17 +54,17 @@ jobs:
             DESCRIBE="v0.0.0"
           fi
 
-          # Increment minor version for the latest tag
-          # e.g., if latest stable is v1.2.3, latest tag becomes v1.3.0-latest
+          # Increment minor version for the dev tag
+          # e.g., if latest stable is v1.2.3, dev tag becomes v1.3.0-dev
           MAJOR_VERSION=$(echo $DESCRIBE | cut -d. -f1)
           MINOR_VERSION=$(echo $DESCRIBE | cut -d. -f2)
           MINOR_VERSION=$((MINOR_VERSION + 1))
 
-          TAG="${MAJOR_VERSION}.${MINOR_VERSION}.0-latest"
+          TAG="${MAJOR_VERSION}.${MINOR_VERSION}.0-dev"
           echo "Creating tag: $TAG"
           echo "tag=$TAG" >> $GITHUB_OUTPUT
 
-          git tag -fa "$TAG" -m "$TAG: latest build from main"
+          git tag -fa "$TAG" -m "$TAG: dev build from main"
           git push -f origin "$TAG"
 
       - name: Trigger release workflow
