--- a/.github/workflows/nscloud-cache-action.yml
+++ b/.github/workflows/nscloud-cache-action.yml
@@ -17,6 +17,20 @@ jobs:
   modes:
     # TODO: Update to main branch SHA once PR #64 is merged
     # https://github.com/namespacelabs/nscloud-cache-action/pull/64
-    uses: namespacelabs/nscloud-cache-action/.github/workflows/modes-reusable.yaml@581e820d93b98587a24c0999c51e6b9a116cbede # space-matrix-reusable
+    uses: namespacelabs/nscloud-cache-action/.github/workflows/modes-reusable.yaml@d2b81a155fc0c924da5edd24edc328697830cc16 # space-matrix-reusable
     with:
       space-source-ref: ${{ github.event.pull_request.head.sha || github.sha }}
+
+  # Single check for branch protection after all mode tests complete
+  modes-ok:
+    needs: modes
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check mode tests passed
+        run: |
+          if [[ "${{ needs.modes.result }}" != "success" ]]; then
+            echo "Mode tests failed with result: ${{ needs.modes.result }}"
+            exit 1
+          fi
+          echo "All mode tests passed"
