--- a/.github/workflows/nscloud-cache-action.yml
+++ b/.github/workflows/nscloud-cache-action.yml
@@ -17,7 +17,7 @@ jobs:
   modes:
     # TODO: Update to main branch SHA once PR #64 is merged
     # https://github.com/namespacelabs/nscloud-cache-action/pull/64
-    uses: namespacelabs/nscloud-cache-action/.github/workflows/modes-reusable.yaml@5036d7df7d883d5f38362b3e335001cda718a273 # v1.3.0-beta.4
+    uses: namespacelabs/nscloud-cache-action/.github/workflows/modes-reusable.yaml@a4cc4697b9de3b562bec5a856e6f3c31f94506e2 # v1.3.0
     with:
       space-source-ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
